--- a/src/update5/org/cict/facultyhub/metro-ui-table.css
+++ b/src/update5/org/cict/facultyhub/metro-ui-table.css
@@ -51,9 +51,7 @@
     -fx-border-color: #FFFFFF;
 }
 
-/*
-.metro-row:hover{
-    -fx-background-color: #74B1F4;
-}
-*/
 
+.metro-row:hover {
+    -fx-background-color: #FF7659;
+}
