--- a/src/update5/org/cict/facultyhub/metro-ui.css
+++ b/src/update5/org/cict/facultyhub/metro-ui.css
@@ -54,5 +54,9 @@ Created 10-06-2017
 }
 
 .metro-combo-box{
-    -fx-background-color: #FFFFFF;
+    -fx-background-color: #FF7659;
+}
+
+.button:hover {
+    -fx-background-color: #FF7659;
 }
