--- a/src/update3/org/cict/access/TransactionPin.fxml
+++ b/src/update3/org/cict/access/TransactionPin.fxml
@@ -4,16 +4,13 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox fx:id="application_root" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="193.0" prefWidth="306.0" spacing="10.0" style="-fx-background-color: #F76C83;" stylesheets="@management/metro-ui.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="application_root" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="193.0" prefWidth="437.0" spacing="10.0" style="-fx-background-color: #F76C83;" stylesheets="@management/metro-ui.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox>
+      <HBox prefHeight="64.0" prefWidth="417.0">
          <children>
             <Label maxWidth="1.7976931348623157E308" prefHeight="47.0" prefWidth="228.0" text="Please enter your transaction pin and click Enter." wrapText="true" HBox.hgrow="ALWAYS">
                <font>
@@ -23,15 +20,6 @@
                   <Insets left="20.0" top="20.0" />
                </HBox.margin>
             </Label>
-            <JFXButton fx:id="btn_close" alignment="CENTER" contentDisplay="CENTER" prefHeight="21.0" prefWidth="24.0" text=" ">
-               <graphic>
-                  <ImageView fitHeight="36.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@management/images/Close%20Window_32px.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </JFXButton>
          </children>
          <VBox.margin>
             <Insets left="20.0" />
@@ -45,11 +33,23 @@
             <Insets left="40.0" right="40.0" />
          </VBox.margin>
       </PasswordField>
-      <JFXButton fx:id="btn_submit" prefHeight="32.0" prefWidth="222.0" style="-fx-border-color: white;" text="Submit" textFill="WHITE">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </JFXButton>
+      <HBox spacing="10.0">
+         <children>
+            <JFXButton fx:id="btn_submit" prefHeight="32.0" prefWidth="355.0" style="-fx-border-color: white;" text="Submit" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="btn_close" prefHeight="32.0" prefWidth="355.0" style="-fx-border-color: white;" text="Cancel" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </JFXButton>
+         </children>
+         <VBox.margin>
+            <Insets left="40.0" right="40.0" />
+         </VBox.margin>
+      </HBox>
    </children>
    <padding>
       <Insets bottom="20.0" />
