fixed loading bug in export excel and added hover in setion, my account and linked

--- a/src/update3/org/cict/layout/sectionmain/metro-ui.css
+++ b/src/update3/org/cict/layout/sectionmain/metro-ui.css
@@ -51,3 +51,7 @@
 .metro-combo-box{
     -fx-background-color: #FFFFFF;
 }
+
+.metro-row:hover, .button:hover {
+    -fx-background-color: #FF7F00
+}
