--- a/src/update4/org/cict/linked_manager/metro-ui.css
+++ b/src/update4/org/cict/linked_manager/metro-ui.css
@@ -56,3 +56,7 @@ Created 10-06-2017
 .metro-combo-box{
     -fx-background-color: #FFFFFF;
 }
+
+.metro-row:hover, .button:hover {
+    -fx-background-color: #2980B9;
+}
