--- a/src/update2/org/cict/layout/subjects/subject-bank.fxml
+++ b/src/update2/org/cict/layout/subjects/subject-bank.fxml
@@ -109,7 +109,7 @@
                         <Font name="System Bold" size="28.0" />
                      </font>
                   </Label>
-                  <Line endX="340.0" startX="-100.0" />
+                  <Line endX="340.0" startX="-100.0" stroke="WHITE" />
                   <Label text="Sorry, but I have nothing to preview. Try adding a subject first." wrapText="true">
                      <font>
                         <Font size="25.0" />
