--- a/src/update3/org/cict/access/TransactionPin.fxml
+++ b/src/update3/org/cict/access/TransactionPin.fxml
@@ -4,15 +4,17 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="application_root" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="193.0" prefWidth="437.0" spacing="10.0" style="-fx-background-color: #F76C83;" stylesheets="@management/metro-ui.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="application_root" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="193.0" prefWidth="437.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox prefHeight="64.0" prefWidth="417.0">
          <children>
-            <Label maxWidth="1.7976931348623157E308" prefHeight="47.0" prefWidth="228.0" text="Please enter your transaction pin and click Enter." wrapText="true" HBox.hgrow="ALWAYS">
+            <Label maxWidth="1.7976931348623157E308" prefHeight="47.0" prefWidth="228.0" text="Please enter your transaction pin and click Enter." textFill="#f76c83" wrapText="true" HBox.hgrow="ALWAYS">
                <font>
                   <Font size="15.0" />
                </font>
@@ -22,25 +24,31 @@
             </Label>
          </children>
          <VBox.margin>
-            <Insets left="20.0" />
+            <Insets left="25.0" />
          </VBox.margin>
       </HBox>
-      <PasswordField fx:id="txt_pin" prefHeight="28.0" prefWidth="324.0">
-         <font>
-            <Font size="20.0" />
-         </font>
-         <VBox.margin>
-            <Insets left="40.0" right="40.0" />
-         </VBox.margin>
-      </PasswordField>
+      <HBox alignment="CENTER" spacing="10.0">
+         <children>
+            <ImageView fitHeight="28.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/icons8-lock-filled-64.png" />
+               </image>
+            </ImageView>
+            <PasswordField fx:id="txt_pin" prefHeight="28.0" prefWidth="324.0">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </PasswordField>
+         </children>
+      </HBox>
       <HBox spacing="10.0">
          <children>
-            <JFXButton fx:id="btn_submit" prefHeight="32.0" prefWidth="355.0" style="-fx-border-color: white;" text="Submit" textFill="WHITE">
+            <JFXButton fx:id="btn_submit" prefHeight="32.0" prefWidth="355.0" style="-fx-background-color: #F76C83;" text="Submit" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="btn_close" prefHeight="32.0" prefWidth="355.0" style="-fx-border-color: white;" text="Cancel" textFill="WHITE">
+            <JFXButton fx:id="btn_close" prefHeight="32.0" prefWidth="355.0" style="-fx-background-color: #F76C83;" text="Cancel" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
